--- a/tag_linter/flask_app/templates/base.html
+++ b/tag_linter/flask_app/templates/base.html
@@ -31,7 +31,7 @@
           <a href="/search">Search</a>
         </li>
         <li>
-          <a href="/tag_management">Tags</a>
+          <a href="/tools">Tools</a>
         </li>
       </ul>
     </nav>
