--- a/tag_linter/flask_app/templates/search_and_destroy.html
+++ b/tag_linter/flask_app/templates/search_and_destroy.html
@@ -18,7 +18,6 @@
       var elemTagService = document.getElementById("input_tag_service")
 
       var elemTagName = document.getElementById("input_tag_name")
-      var elemNamespaceMode = document.getElementById("input_namespace_mode")
 
       var elemInboxEnabled = document.getElementById("input_enable_inbox")
       var elemArchiveEnabled = document.getElementById("input_enable_archive")
@@ -29,15 +28,12 @@
 
       elemDestroyButton.onclick = function (e) {
         var tagName = elemTagName.value;
-        var isNamespace = elemNamespaceMode.checked;
 
         destroy({
           inbox: elemInboxEnabled.checked,
           archive: elemArchiveEnabled.checked,
           tagName: elemTagName.value,
-          tagService: elemTagService.value,
-          namespaceMode: elemNamespaceMode.checked
-        })
+          tagService: elemTagService.value})
       }
     })
   </script>
@@ -46,13 +42,13 @@
 {% block content %}
   <p>This feature will remove a tag or all tags of a namespace from a given tag service. Please note that this may run slowly, and that this process cannot be easily undone. You should create a backup of your database before proceeding, or otherwise be prepared for unforeseen consequences.</p>
 
-  <p>To specify a namespace, type in the namespace without a trailing colon. For example, enter
+  <p>To specify a namespace, type in the namespace, then append
+    <code>:*</code>
+    to it. for example, to remove all tags in the
     <code>species</code>
-    to remove all
+    namespace, type in
     <code>species:*</code>
-    tags. Then, check the
-    <code>This is a namespace</code>
-    checkbox.</p>
+    as the tag name</p>
 
   <label for="input_tag_service">Tag service:</label>
   <select id="input_tag_service"></select>
@@ -60,9 +56,6 @@
   <br/>
   <label for="input_tag_name">Tag:</label>
   <input id="input_tag_name" type="text"/>
-  <br/>
-  <input id="input_namespace_mode" type="checkbox"/>
-  <label for="input_namespace_mode">This is a namespace</label>
   <br/>
   <br/>
   <input id="input_enable_inbox" type="checkbox" checked="true"/>
