--- a/tag_linter/flask_app/templates/tools.html
+++ b/tag_linter/flask_app/templates/tools.html
@@ -54,8 +54,7 @@
       — Remove a tag or a namespace from a tag service.
     </li>
     <li>
-      (WIP)
-      <a href="#">Namespace Transpose</a>
+      <a href="/transpose_namespace">Transpose Namespace</a>
       — Replace all
       <code>foo:abcd</code>
       tags with
